<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/calc1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@drawable/black95_button"
                android:text="@string/lss"
                android:textSize="25sp" />

            <Button
                android:id="@+id/calc2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@drawable/black95_button"
                android:text="@string/uovti"
                android:textSize="25sp" />

            <Button
                android:id="@+id/calc3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@drawable/black95_button"
                android:text="@string/si"
                android:textSize="25sp" />

            <Button
                android:id="@+id/calc4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@drawable/black95_button"
                android:text="@string/dlp"
                android:textSize="25sp" />

            <Button
                android:id="@+id/calc5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@drawable/black95_button"
                android:text="@string/pvb"
                android:textSize="25sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>